# aoc_2022

./: .clang-format  .clangd  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  download_inputs.py
cmake/: cmake_host_system_information.cmake.in  msvc_toolchain.cmake
src/: day_01.cc  day_02.cc  day_03.cc  day_04.cc  day_05.cc  day_06.cc  day_07.cc  day_08.cc  day_09.cc  day_10.cc  types.hh  utils.cc  utils.hh
